--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --base /bold-canvas-studio/"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
