--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   contents: read
-  actions: read
+  actions: write
   pages: write
   id-token: write
 
@@ -45,7 +45,7 @@ jobs:
 
   deploy:
     permissions:
-      actions: read
+      actions: write
       contents: read
       pages: write
       id-token: write
